fix: adjust li spacing (#115)

--- a/src/less/_page.less
+++ b/src/less/_page.less
@@ -173,7 +173,7 @@ ul {
 }
 
 li + li {
-  margin: 1rem 0 0;
+  margin: 0.5rem 0 0;
 }
 
 blockquote {
